--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     />
 
     <!-- stylesheet -->
-    <link rel="stylesheet" href="./css/style.css" />
+    <link rel="stylesheet" href="/css/style.css" />
 
     <!-- Google fonts -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -96,6 +96,6 @@
       >.
     </footer>
 
-    <script src="/index.js"></script>
+    <script src="index.js"></script>
   </body>
 </html>
