--- a/index.html
+++ b/index.html
@@ -57,11 +57,7 @@
 
     <!-- Thank you state start -->
     <section id="page2" class="content grid hidden">
-      <img
-        class="checkoutimg"
-        src="/images/illustration-thank-you.svg"
-        alt=""
-      />
+      <img class="checkoutimg" src="images/illustration-thank-you.svg" alt="" />
       <div class="selected-value">
         <div class="text-area flex">
           <p>
