try to fix paths

--- a/index.html
+++ b/index.html
@@ -57,7 +57,11 @@
 
     <!-- Thank you state start -->
     <section id="page2" class="content grid hidden">
-      <img class="checkoutimg" src="images/illustration-thank-you.svg" alt="" />
+      <img
+        class="checkoutimg"
+        src="images/illustration-thank-you.svg  "
+        alt=""
+      />
       <div class="selected-value">
         <div class="text-area flex">
           <p>
@@ -92,6 +96,6 @@
       >.
     </footer>
 
-    <script src="index.js"></script>
+    <script src="index.js "></script>
   </body>
 </html>
